coc/tests/snapshots/integration_tests__basic_terms.snap
---
source: coc/tests/integration_tests.rs
expression: output
---
Type => Type : Type 1
Prop => Prop : Type
