coc/tests/snapshots/integration_tests__golden_files@basic.coc.snap
---
source: coc/tests/integration_tests.rs
expression: output
input_file: coc/tests/basic.coc
---
Type : Type 1
Prop : Type
