coc/tests/snapshots/integration_tests__golden_files@final_demo.coc.snap
---
source: coc/tests/integration_tests.rs
expression: output
input_file: coc/tests/final_demo.coc
---
Parsed module with 7 declarations
✓ Module 'final_demo.coc' type checks successfully!
