coc/tests/snapshots/integration_tests__golden_files@nat.coc.snap
---
source: coc/tests/integration_tests.rs
expression: output
input_file: coc/tests/nat.coc
---
Parsed module with 1 declarations
✓ Module 'nat.coc' type checks successfully!
