coc/tests/snapshots/integration_tests__golden_files@target_compose.coc.snap
---
source: coc/tests/integration_tests.rs
expression: output
input_file: coc/tests/target_compose.coc
---
Parsed module with 1 declarations
✓ Module 'target_compose.coc' type checks successfully!
