coc/tests/snapshots/integration_tests__golden_files@working_square.coc.snap
---
source: coc/tests/integration_tests.rs
expression: output
input_file: coc/tests/working_square.coc
---
Parsed module with 3 declarations
✓ Module 'working_square.coc' type checks successfully!
